WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130041
Repatch should save and restore all used registers - not just temp ones - when making a call
https://bugs.webkit.org/show_bug.cgi?id=130041
Summary
Repatch should save and restore all used registers - not just temp ones - whe...
Filip Pizlo
Reported
2014-03-10 14:30:24 PDT
Patch forthcoming.
Attachments
the patch
(15.68 KB, patch)
2014-03-10 14:32 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-03-10 14:32:47 PDT
Created
attachment 226335
[details]
the patch
WebKit Commit Bot
Comment 2
2014-03-10 14:34:25 PDT
Attachment 226335
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/jit/ScratchRegisterAllocator.h:72: The parameter name "scratchBuffer" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/jit/ScratchRegisterAllocator.h:74: The parameter name "scratchBuffer" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2014-03-10 14:37:43 PDT
Comment on
attachment 226335
[details]
the patch r=me
Filip Pizlo
Comment 4
2014-03-10 16:26:13 PDT
Landed in
http://trac.webkit.org/changeset/165414
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug